# BUT_FIT_PCG_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  Redme.md  compare.bat  compare.sh  loadModules.sh  nbody.md  runFinalBenchmark.sh  runProgressBenchmark.sh  runTests.bat  runTests.sh  testout.txt
Commons/: gen.cpp  h5Helper.cpp  h5Helper.h
Cpu/: main.cpp  nbody.cpp  nbody.h
Step0/: main.cu  nbody.cu  nbody.cuh
Step1/: main.cu  nbody.cu  nbody.cuh
Step2/: main.cu  nbody.cu
Step3/: main.cu  nbody.cu  nbody.cuh
Step4/: main.cu  nbody.cu  nbody.cuh
Tests/Outputs/: circle.h5  thompson.h5  two-lines-one.h5  two-lines-several.h5  two-lines.h5
